packages/compiler-rs/tests/snapshots/v_html__should_raise_error_and_ignore_children_when_v_html_is_present.snap
---
source: tests/v_html.rs
expression: code
---
import { template as _template } from "vue";
const t0 = _template("<div>hello</div>", true);
(() => {
  const n0 = t0();
  return n0;
})();
