packages/compiler-rs/tests/snapshots/v_html__should_raise_error_if_has_no_expression.snap
---
source: tests/v_html.rs
expression: code
---
import { setHtml as _setHtml, template as _template } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  _setHtml(n0, "");
  return n0;
})();
